Fix spreadsheet download ContentType config.