@@ -5,7 +5,7 @@ import org.springframework.http.MediaType;
 import org.springframework.web.servlet.config.annotation.ContentNegotiationConfigurer;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
-import java.util.Collections;
+import java.util.List;
 
 @Configuration
 public class WebConfig implements WebMvcConfigurer {
@@ -14,6 +14,10 @@ public class WebConfig implements WebMvcConfigurer {
 	public void configureContentNegotiation(ContentNegotiationConfigurer configurer) {
 		configurer.ignoreAcceptHeader(true);
 		configurer.defaultContentType(MediaType.APPLICATION_JSON);
-		configurer.defaultContentTypeStrategy(webRequest -> Collections.singletonList(MediaType.APPLICATION_JSON));
+		configurer.defaultContentTypeStrategy(webRequest ->
+			List.of(
+					MediaType.APPLICATION_JSON,
+					MediaType.parseMediaType("application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"))
+		);
 	}
 }
